# prompt_builder_gui

./: .gitignore  Cargo.toml  Cargo_new.toml  Prompt Curso ACTIX_API_CRUD.txt  README.md  build.rs  build_release.bat  create_portable_installer.bat  generated_promp_teste botão abrirt.txt  generated_prompt.txt  generated_prompt00.txt  generated_prompt01.txt  generated_prompt02 Area transf.txt  generated_prompt03 testanto preview.txt  generated_prompt05 botões abaixo.txt  generated_prompt06 - teste inicial completo.txt  teste_longo_scroll.txt
installer/: install.bat  install.ps1  install_simple.ps1  uninstall.ps1
prompts salvos/: Prompt Curso ACTIX_API_CRUD2.txt  teste_estruturado.txt  teste_simples.txt
src/: lib.rs  main.rs
src/models/: auxiliary_content.rs  context.rs  few_shot.rs  guidance.rs  limitations.rs  main_content.rs  mod.rs  output_format.rs  refactoring.rs  tests.rs
src/services/: file_service.rs  mod.rs  prompt_generator.rs
tests/: integration_file_operations.rs  integration_parsing.rs  integration_prompt_generation.rs
ui/: app-window.slint
